--- a/View/Demo.csproj
+++ b/View/Demo.csproj
@@ -63,12 +63,14 @@
     <Compile Include="Presentation\IPresenter.cs" />
     <Compile Include="Presentation\IPurcpManagerView.cs" />
     <Compile Include="Presentation\ISignInView.cs" />
+    <Compile Include="Presentation\IStorekeeperSearchIncomingInvoiceView.cs" />
     <Compile Include="Presentation\IStorekeeperView.cs" />
     <Compile Include="Presentation\IView.cs" />
     <Compile Include="Presentation\ClientManagerPresenter.cs" />
     <Compile Include="Presentation\PurcpManagerPresenter.cs" />
     <Compile Include="Presentation\SignInPresenter.cs" />
     <Compile Include="Presentation\StorekeeperPresenter.cs" />
+    <Compile Include="Presentation\StorekeeperSeacrhIncomingInvoicePresenter.cs" />
     <Compile Include="View\BookerView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,10 +103,16 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\StorekeeperView.cs">
+    <Compile Include="View\Storekeeper\StorekeeperSearchIncomingInvoiceView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\StorekeeperView.Designer.cs">
+    <Compile Include="View\Storekeeper\StorekeeperSearchIncomingInvoiceView.Designer.cs">
+      <DependentUpon>StorekeeperSearchIncomingInvoiceView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Storekeeper\StorekeeperView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Storekeeper\StorekeeperView.Designer.cs">
       <DependentUpon>StorekeeperView.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -131,7 +139,10 @@
     <EmbeddedResource Include="View\SignInView.resx">
       <DependentUpon>SignInView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\StorekeeperView.resx">
+    <EmbeddedResource Include="View\Storekeeper\StorekeeperSearchIncomingInvoiceView.resx">
+      <DependentUpon>StorekeeperSearchIncomingInvoiceView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Storekeeper\StorekeeperView.resx">
       <DependentUpon>StorekeeperView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
