Added window "AddNewOrder" for the window "ClientManager". Also added presenter for this window and few interfaces

--- a/View/Demo.csproj
+++ b/View/Demo.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -22,7 +37,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -62,9 +77,12 @@
     <Compile Include="Model\IModel.cs" />
     <Compile Include="Model\Model.cs" />
     <Compile Include="Presentation\BookerPresenter.cs" />
+    <Compile Include="Presentation\ClientManagerAddOrderPresenter.cs" />
     <Compile Include="Presentation\CourierPresenter.cs" />
     <Compile Include="Presentation\IBack.cs" />
     <Compile Include="Presentation\IBookerView.cs" />
+    <Compile Include="Presentation\IClientManagerAddOrderPresenter.cs" />
+    <Compile Include="Presentation\IClientManagerAddOrderView.cs" />
     <Compile Include="Presentation\IClientManagerView.cs" />
     <Compile Include="Presentation\ICourierView.cs" />
     <Compile Include="Presentation\IPresenter.cs" />
@@ -88,10 +106,16 @@
     <Compile Include="View\BookerView.Designer.cs">
       <DependentUpon>BookerView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\ClientManagerView.cs">
+    <Compile Include="View\ClientManager\ClientManagerAddOrderView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\ClientManagerView.Designer.cs">
+    <Compile Include="View\ClientManager\ClientManagerAddOrderView.Designer.cs">
+      <DependentUpon>ClientManagerAddOrderView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ClientManager\ClientManagerView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ClientManager\ClientManagerView.Designer.cs">
       <DependentUpon>ClientManagerView.cs</DependentUpon>
     </Compile>
     <Compile Include="View\CourierView.cs">
@@ -144,7 +168,10 @@
     <EmbeddedResource Include="View\BookerView.resx">
       <DependentUpon>BookerView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\ClientManagerView.resx">
+    <EmbeddedResource Include="View\ClientManager\ClientManagerAddOrderView.resx">
+      <DependentUpon>ClientManagerAddOrderView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ClientManager\ClientManagerView.resx">
       <DependentUpon>ClientManagerView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\CourierView.resx">
@@ -179,6 +206,17 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 и x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
