--- a/View/Demo.csproj
+++ b/View/Demo.csproj
@@ -73,17 +73,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\BriefInvoiceInfo.cs" />
+    <Compile Include="Model\ClientOrder.cs" />
     <Compile Include="Model\IBriefInvoiceInfo.cs" />
+    <Compile Include="Model\IClientOrder.cs" />
     <Compile Include="Model\IModel.cs" />
     <Compile Include="Model\Model.cs" />
     <Compile Include="Presentation\BookerPresenter.cs" />
-    <Compile Include="Presentation\ClientManagerAddOrderPresenter.cs" />
+    <Compile Include="Presentation\ClientManager\ClientManagerAddOrderPresenter.cs" />
+    <Compile Include="Presentation\ClientManager\ClientManagerAddOrderSecondStepPresenter.cs" />
+    <Compile Include="Presentation\ClientManager\ClientManagerInspectOrderPresenter.cs" />
+    <Compile Include="Presentation\ClientManager\IClientManagerAddOrderSecondStepView.cs" />
+    <Compile Include="Presentation\ClientManager\IClientManagerInspectOrderView.cs" />
     <Compile Include="Presentation\CourierPresenter.cs" />
     <Compile Include="Presentation\IBack.cs" />
     <Compile Include="Presentation\IBookerView.cs" />
-    <Compile Include="Presentation\IClientManagerAddOrderPresenter.cs" />
-    <Compile Include="Presentation\IClientManagerAddOrderView.cs" />
-    <Compile Include="Presentation\IClientManagerView.cs" />
+    <Compile Include="Presentation\ClientManager\IClientManagerAddOrderPresenter.cs" />
+    <Compile Include="Presentation\ClientManager\IClientManagerAddOrderView.cs" />
+    <Compile Include="Presentation\ClientManager\IClientManagerView.cs" />
     <Compile Include="Presentation\ICourierView.cs" />
     <Compile Include="Presentation\IPresenter.cs" />
     <Compile Include="Presentation\IPurcpManagerView.cs" />
@@ -94,7 +100,7 @@
     <Compile Include="Presentation\IStorekeeperView.cs" />
     <Compile Include="Presentation\IStorekeeperSearchSalesInvoiceView.cs" />
     <Compile Include="Presentation\IView.cs" />
-    <Compile Include="Presentation\ClientManagerPresenter.cs" />
+    <Compile Include="Presentation\ClientManager\ClientManagerPresenter.cs" />
     <Compile Include="Presentation\PurcpManagerPresenter.cs" />
     <Compile Include="Presentation\SignInPresenter.cs" />
     <Compile Include="Presentation\StorekeeperPresenter.cs" />
@@ -106,11 +112,23 @@
     <Compile Include="View\BookerView.Designer.cs">
       <DependentUpon>BookerView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\ClientManager\ClientManagerAddOrderSecondStepView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ClientManager\ClientManagerAddOrderSecondStepView.Designer.cs">
+      <DependentUpon>ClientManagerAddOrderSecondStepView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\ClientManager\ClientManagerAddOrderView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\ClientManager\ClientManagerAddOrderView.Designer.cs">
       <DependentUpon>ClientManagerAddOrderView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ClientManager\ClientManagerInspectOrderView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ClientManager\ClientManagerInspectOrderView.Designer.cs">
+      <DependentUpon>ClientManagerInspectOrderView.cs</DependentUpon>
     </Compile>
     <Compile Include="View\ClientManager\ClientManagerView.cs">
       <SubType>Form</SubType>
@@ -168,8 +186,14 @@
     <EmbeddedResource Include="View\BookerView.resx">
       <DependentUpon>BookerView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\ClientManager\ClientManagerAddOrderSecondStepView.resx">
+      <DependentUpon>ClientManagerAddOrderSecondStepView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\ClientManager\ClientManagerAddOrderView.resx">
       <DependentUpon>ClientManagerAddOrderView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ClientManager\ClientManagerInspectOrderView.resx">
+      <DependentUpon>ClientManagerInspectOrderView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\ClientManager\ClientManagerView.resx">
       <DependentUpon>ClientManagerView.cs</DependentUpon>
